--- a/src/components/sidebar/routePathView/routePathListTab/routePathListItem.scss
+++ b/src/components/sidebar/routePathView/routePathListTab/routePathListItem.scss
@@ -15,6 +15,8 @@ $borderContainerWidth: 16px;
 
 .routePathListItem {
     display: flex;
+    margin-left: $invalidNodeBorderWidth;
+    margin-right: $invalidNodeBorderWidth;
 
     .contentWrapper {
         display: flex;
